Tree/k8s/minikube/helm/app-web.yaml
---
# Deployment de la aplicación web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-web
  template:
    metadata:
      labels:
        app: app-web
    spec:
      containers:
      - name: app-web
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        emptyDir: {}

---
# Servicio para la aplicación web
apiVersion: v1
kind: Service
metadata:
  name: app-web
spec:
  type: ClusterIP
  selector:
    app: app-web
  ports:
  - port: 80
    targetPort: 80
