Tree/k8s/minikube/helm/ingress.yaml
---
# Namespace para Ingress
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
# Deployment de Ingress Nginx
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
    spec:
      containers:
      - name: ingress-nginx-controller
        image: nginx/nginx-ingress:latest
        ports:
        - containerPort: 80
        - containerPort: 443

---
# Servicio para Ingress Nginx
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx

---
# Definición del Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-web
spec:
  rules:
  - host: pau.home
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: app-web
            port: 
              number: 80
